[package]
name = "ip_discord"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12" }
dotenv = { version = "0.15.0" }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1.50", features = ["full"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3" }
async-trait = { version = "0.1" }
